<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SpaceX\'s Journey to Mars</string>

    <string name="upcoming">UPCOMING</string>
    <string name="no_deatils_available">No details available</string>

    <string name="placeholder">Placeholder</string>

    <string name="core_serial">Core serial:</string>
    <string name="flight">Flight:</string>
    <string name="block">Block:</string>
    <string name="gridfins">Gridfins:</string>
    <string name="legs">Legs:</string>
    <string name="resued">Resued:</string>
    <string name="land_success">Land success:</string>
    <string name="landing_intent">Landing intent:</string>
    <string name="landing_type">Landing type:</string>
    <string name="landing_vehicle">Landing vehicle:</string>
    <string name="details">Details:</string>
    <string name="ship">Ship:</string>
    <string name="recovered">Recovered:</string>
    <string name="recovery_attempted">Recovery attempted:</string>
    <string name="fairing">Fairing:</string>
    <string name="orbit">Orbit:</string>
    <string name="payload_mass_kg">Payload mass (kg):</string>
    <string name="payload_type">Payload type:</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="nationality">Nationality:</string>
    <string name="customers">Customers:</string>
    <string name="reused">Reused:</string>
    <string name="payload_id">Payload ID:</string>
    <string name="thrust_sea_level">Thrust sea level</string>
    <string name="thrust_vacuum">Thrust vacuum</string>
    <string name="engines">Engines</string>
    <string name="fuel_amount_in_tons">Fuel amount in tons</string>
    <string name="burn_time_in_seconds">Burn time in seconds</string>
    <string name="reuseable">Reuseable</string>
    <string name="click_here_to_read_more"><u>Click here to read more!</u></string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="app_made_by_kaedin_schouten">Made by: <b>Kaedin Schouten</b></string>
    <string name="prefs_show_upcoming">show_upcoming</string>
    <string name="prefs_show_nav_bar">show_nav_bar</string>

</resources>
