<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/first_stage_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_background"
        android:padding="20dp">


        <RelativeLayout
            android:id="@+id/rel_first_stage_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/first_stage_row_item">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="First stage"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_first_stage_thrust_sea_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_first_stage_header"
            android:padding="@dimen/first_stage_row_item">


            <TextView
                android:id="@+id/first_stage_thrust_sea_level_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thrust_sea_level"
                android:textColor="@color/main_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/first_stage_thrust_sea_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/placeholder"
                android:textColor="@color/text_rocket_details"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_first_stage_thrust_vacuum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_first_stage_thrust_sea_level"
            android:padding="@dimen/first_stage_row_item">

            <TextView
                android:id="@+id/first_stage_thrust_vacuum_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thrust_vacuum"
                android:textColor="@color/main_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/first_stage_thrust_vacuum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/placeholder"
                android:textColor="@color/text_rocket_details"
                android:textStyle="bold" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rel_first_stage_engines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_first_stage_thrust_vacuum"
            android:padding="@dimen/first_stage_row_item">

            <TextView
                android:id="@+id/first_stage_engines_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/engines"
                android:textColor="@color/main_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/first_stage_engines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/placeholder"
                android:textColor="@color/text_rocket_details"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_first_stage_fuel_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_first_stage_engines"
            android:padding="@dimen/first_stage_row_item">

            <TextView
                android:id="@+id/first_stage_fuel_amount_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fuel_amount_in_tons"
                android:textColor="@color/main_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/first_stage_fuel_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/placeholder"
                android:textColor="@color/text_rocket_details"
                android:textStyle="bold" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rel_first_stage_burn_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_first_stage_fuel_amount"
            android:padding="@dimen/first_stage_row_item">

            <TextView
                android:id="@+id/first_stage_burn_time_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/burn_time_in_seconds"
                android:textColor="@color/main_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/first_stage_burn_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/placeholder"
                android:textColor="@color/text_rocket_details"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_first_stage_reused"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_first_stage_burn_time"
            android:padding="@dimen/first_stage_row_item">

            <TextView
                android:id="@+id/first_stage_reused_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reuseable"
                android:textColor="@color/main_text"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/first_stage_reused"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_questionmark" />
        </RelativeLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
